# off-the-cloud

./: Cargo.toml  README.md  config.example.yaml  load.sh
messages/: .gitignore  sample-pull-list.csv  sample-push-list.csv
scripts/: backup-domain.sh  pull-csv.sh  pull.sh  push-csv.sh  push.sh
src/: args.rs  config.rs  main.rs
src/caldav/: pull.rs
src/imap/: mbox.rs  mod.rs  pull.rs  push.rs
