[package]
name = "off-the-cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
pretty_env_logger = "0.5.0"
anyhow = "1.0.89"
async-imap = { version = "0.10.2", features = ["runtime-tokio"], default-features = false }
async-native-tls = { version = "0.5", features = ["runtime-tokio"], default-features = false }
async-std = { version = "1.12.0", features = ["std", "attributes"], optional = true }
tokio = { version = "1.36.0", features = ["full"] }
clap = { version = "4.5.3", features = ["derive", "cargo"] }
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.33"
log = "0.4.22"
parse-size = "1.1.0"
human_bytes = { version = "0.4", default-features = false }
utf7-imap = "0.3.2"
chrono = "0.4.38"
async-walkdir = "2.0.0"
futures-lite = "2.4.0"
tokio-util = "0.7.12"
